# custom-autoconf

./: .configure.ac.swp  AUTHORS  INSTALL  Makefile.am  NEWS  README.md  configure  configure.ac
autom4te.cache/: output.1  requests  traces.0  traces.1
include/: config.h  config.h.in  config.h.in~
src/: myconf.c
src/.deps/: myconf.Po
